// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot: formatBestBetForContext output format > moneyline best bet matches snapshot 1`] = `
"🏀 BEST BET TODAY

**Los Angeles Lakers ML @ -130**
Boston Celtics @ Los Angeles Lakers | NBA | Jan 15, 3:00 PM EST
Score: 72/100

**WHY THIS BET:**

Our Elo model gives Los Angeles Lakers a 60% win probability, while the market odds (-130) imply only 56.5%. That's a 3.5% edge.

**MATCHUP:**

Los Angeles Lakers (Elo: 1650) vs Boston Celtics (Elo: 1600). The 50-point Elo difference favors Los Angeles Lakers.

**SITUATIONAL FACTORS:**

- No significant situational factors detected

**VALUE:**

Win Probability: 60% (Elo Model)
Expected Value: $5.50 per $100 bet
ROI: 5.50%
Edge: 3.5%

**SCORE BREAKDOWN:** 72/100

Probability: 11.3/45 points
ROI: 22.3/35 points
Edge: 7.0/20 points

Available at DraftKings."
`;

exports[`Snapshot: formatBestBetForContext output format > no best bet with closest misses matches snapshot 1`] = `
"🏀 TOP PICK TODAY

**Lakers ML @ -140**
Celtics @ Lakers | NBA
Score: 45/100

**WHY THIS BET:**

Market consensus shows Lakers with a 54% win probability. The best available odds (-140) offer a -4.3% edge.

**VALUE:**

Win Probability: 54% (Market Consensus)
Expected Value: $-3.00 per $100 bet
ROI: -3.00%
Edge: -4.3%

**SCORE BREAKDOWN:** 45/100

Probability: 4.5/45 points
ROI: 12.3/35 points
Edge: -8.6/20 points

*Note: This pick has negative expected value. Consider smaller bet size.*

Available at DraftKings."
`;

exports[`Snapshot: formatBestBetForContext output format > spread best bet matches snapshot 1`] = `
"🏀 BEST BET TODAY

**Los Angeles Lakers -3.5 @ -110**
Boston Celtics @ Los Angeles Lakers | NBA | Jan 15, 3:00 PM EST
Score: 80/100

**WHY THIS BET:**

Our Elo model gives Los Angeles Lakers an 58% probability to cover the spread, while the market odds (-110) imply only 52.4%. That's a 5.6% edge.

**MATCHUP:**

Los Angeles Lakers (Elo: 1680) vs Boston Celtics (Elo: 1600). The 80-point Elo difference favors Los Angeles Lakers.

**SITUATIONAL FACTORS:**

- No significant situational factors detected

**VALUE:**

Cover Probability: 58% (Elo Model)
Expected Value: $7.20 per $100 bet
ROI: 7.20%
Edge: 5.6%

**SCORE BREAKDOWN:** 80/100

Probability: 9.0/45 points
ROI: 23.8/35 points
Edge: 11.2/20 points

Available at FanDuel."
`;

exports[`Snapshot: formatBestBetForContext output format > total over best bet matches snapshot 1`] = `
"🏀 BEST BET TODAY

**Over 224.5 Points @ -110**
Boston Celtics @ Los Angeles Lakers | NBA | Jan 15, 3:00 PM EST
Score: 68/100

**WHY THIS BET:**

Our Elo model gives this game a 56% probability of going over, while the market odds (-110) imply only 52.4%. That's a 3.6% edge.

**MATCHUP:**

Combined Elo strength: 1625 average (Los Angeles Lakers: 1650, Boston Celtics: 1600). Market line: 224.5.

**SITUATIONAL FACTORS:**

- No significant situational factors detected

**VALUE:**

Over Probability: 56% (Elo Model)
Expected Value: $4.80 per $100 bet
ROI: 4.80%
Edge: 3.6%

**SCORE BREAKDOWN:** 68/100

Probability: 6.8/45 points
ROI: 21.7/35 points
Edge: 7.2/20 points

Available at BetMGM."
`;

exports[`Snapshot: formatEnhancedParlayForContext output format > 3-leg mixed parlay matches snapshot 1`] = `
"=== PARLAY ANALYSIS ===

**3-Leg Parlay** | Parlay Odds: +550 | Payout: $650 per $100

🏀 **Leg 1: Lakers ML @ -150**
   Boston Celtics @ Los Angeles Lakers
   Win probability: 60% | Edge: +3.5%
   Available at: DraftKings

🏀 **Leg 2: Celtics +7.5 @ -110**
   Boston Celtics @ New York Knicks
   Cover probability: 60% | Edge: +3.5%
   Available at: DraftKings

🏀 **Leg 3: Over 224.5 @ -110**
   Miami Heat @ Milwaukee Bucks
   over probability: 60% | Edge: +3.5%
   Available at: DraftKings

**PARLAY MATH:**
- Combined probability: 15% (60% × 60% × 60%)
- Parlay odds: +550 (implied 15.4%)
- Parlay edge: -0.4%
- Expected value: $-2 per $100 bet

**WHY THIS WORKS:**
- Each leg has positive edge individually
- Games are independent (different matchups, no correlation)
"
`;

exports[`Snapshot: formatFilteredBestBetResponse output format > filtered bet with alternatives matches snapshot 1`] = `
"🏀 BEST BEST NBA BET BET

**Los Angeles Lakers ML @ -130**
Boston Celtics @ Los Angeles Lakers | NBA | Jan 15, 3:00 PM EST
Score: 72/100

**WHY THIS BET:**

Our Elo model gives Los Angeles Lakers a 60% win probability, while the market odds (-130) imply only 56.5%. That's a 3.5% edge.

Los Angeles Lakers (Elo: 1650) vs Boston Celtics (Elo: 1600). The 50-point Elo difference favors Los Angeles Lakers.

**VALUE:**

Win Probability: 60% (Elo Model)
Expected Value: $5.50 per $100 bet
ROI: 5.50%
Edge: 3.5%

Available at DraftKings.

**ALTERNATIVES (if user asks "what else?" or can't bet the top pick):**

#2: 🏀 Boston Celtics +3.5 @ -110 | Boston Celtics @ New York Knicks | NBA | Score: 65/100 | 60% prob | DraftKings

*Use these alternatives if user says they can't bet the top pick, wants a different sport, or asks "what else?"*"
`;

exports[`Snapshot: formatGameAnalysisForContext output format > game with Elo and bets matches snapshot 1`] = `
"🏀 GAME ANALYSIS: Duke @ Notre Dame

NCAAB | Jan 15, 6:00 PM EST

**TOP PICK FOR THIS GAME:**

**Notre Dame +17.5 @ -110**
Score: 95/100

**WHY THIS BET:**

Our Elo model gives Notre Dame an 60% probability to cover the spread, while the market odds (-110) imply only 56.5%. That's a 30.9% edge.

**MATCHUP:**

Notre Dame (Elo: 1650) vs Duke (Elo: 1600). The 50-point Elo difference favors Notre Dame.

**SITUATIONAL FACTORS:**

- No significant situational factors detected

**VALUE:**

Cover Probability: 60% (Elo Model)
Market Probability: 56.5% (from -110 odds)
Edge: 30.9%
Expected Value: $5.50 per $100 bet
ROI: 5.50%

**SCORE BREAKDOWN:** 95/100

Probability: 11.3/45 points
ROI: 22.3/35 points
Edge: 20.0/20 points

Available at DraftKings."
`;

exports[`Snapshot: formatGameAnalysisForContext output format > game with Elo but no qualifying bets matches snapshot 1`] = `
"🏀 GAME ANALYSIS: Team B @ Team A

NBA | Jan 15, 6:00 PM EST

**ELO ANALYSIS (no specific bet lines available):**

Team A Elo Rating: 1600
Team B Elo Rating: 1550
Elo Win Probability: Team A 62.0% | Team B 38.0%
Confidence: medium

Our Elo model favors **Team A** at 62.0%.

Note: Specific bet lines (spread, moneyline, total) may not be available yet or the game may have started. The Elo analysis above still reflects our model's assessment of this matchup."
`;
